@startuml
'https://plantuml.com/class-diagram

class Packaging {
-Material
+canFitItem()
+getMass()
}

class Box {
-length : BigDecimal
-width : BigDecimal
-height : BigDecimal
}

class PolyBag {
-volume : BigDecimal
}

enum Material {
CORRUGATE
LAMINATED_PLASTIC
}

Packaging <|-- Box
Packaging <|-- PolyBag
Packaging o-- Material

@enduml